--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,17 +1,5 @@
 endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
-
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+  name: Loon0x00
+  title: Maintainer of Loon
+  url: https://github.com/Loon0x00
+  image_url: https://github.com/Loon0x00.png
